# tauri-v2-desktop-patterns

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: ipc_latency.py
examples/: ai_dashboard_demo.py  sidecar_lifecycle_demo.py
patterns/: __init__.py  ipc_bridge.py  python_bundler.py  sidecar_manager.py  window_state.py
tests/: test_ipc_bridge.py  test_python_bundler.py  test_sidecar_manager.py  test_window_state.py
