[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["patterns"]

[project]
name = "tauri-v2-desktop-patterns"
version = "0.1.0"
description = "Production patterns for Tauri v2 desktop apps: async IPC, Rust+Python sidecar, Python bundling"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["tauri", "desktop", "ipc", "sidecar", "rust", "python", "bundling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "bandit[toml]>=1.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=patterns --cov-report=term-missing --cov-fail-under=60"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "PERF", "PTH", "SIM", "RUF", "TRY", "EM", "TC", "S", "N"]
ignore = ["ANN", "D", "ERA", "T20", "COM812", "ISC001", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "SLF001", "S105", "S106", "S108"]
"patterns/*" = ["PLR2004", "UP042", "UP047", "N802", "N818", "TC002", "TRY300"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.bandit]
skips = ["B101", "B601"]
